--- a/lib/gits_web/live/host_live/events/show/settings.html.heex
+++ b/lib/gits_web/live/host_live/events/show/settings.html.heex
@@ -1,4 +1,4 @@
-<div class="grid gap-4 p-2">
+<div class="grid gap-4">
   <div class="flex">
     <h3 class="grow text-lg/8 font-medium">
       Webhooks
