--- a/lib/gits_web/live/host_live/events/show/dashboard.html.heex
+++ b/lib/gits_web/live/host_live/events/show/dashboard.html.heex
@@ -1,4 +1,4 @@
-<div class="grid gap-4 p-2">
+<div class="grid gap-4">
   <div class="grid grid-cols-2 lg:grid-cols-3 lg:gap-6 gap-4">
     <div
       :for={
