feat: update event management forms and layout
refactor event handling functions in `gitsweb.hostlive.events.show.details`
to simplify webhook management. update form submission and validation
events for better clarity. adjust layout in `show.html.heex` and
`settings.html.heex` for improved user experience.

--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -42,7 +42,7 @@
       </.button>
     </div>
   </div>
-  <div class="grid max-w-screen-xl items-start gap-4 lg:grid-cols-[theme(space.64)_1fr] lg:gap-8 lg:p-2">
+  <div class="grid max-w-screen-xl items-start gap-4 pb-8 lg:grid-cols-[theme(space.64)_1fr] lg:gap-8 lg:p-2">
     <div class="flex gap-2 overflow-x-auto whitespace-nowrap px-2 pb-2 lg:grid lg:rounded-xl lg:bg-zinc-50/70 lg:py-2">
       <.link
         patch={~p"/hosts/#{@host.handle}/events/#{@event.public_id}/dashboard"}
