feat: add event creation functionality and ui updates
introduce a new `policy` for changing event visibility and enhance the
`input` component for better user experience. update event handling
to support both creating and updating events, ensuring proper
assignments in the socket. adjust routing to include a dedicated
create event path, improving navigation for users.

--- a/lib/gits_web/live/host_live/events/list.html.heex
+++ b/lib/gits_web/live/host_live/events/list.html.heex
@@ -6,7 +6,7 @@
     <div class="flex w-full items-center">
       <h2 class="text-4xl grow font-medium col-span-full">Events</h2>
 
-      <.button variant={:solid} href={~p"/hosts/#{@host.handle}/events/create-new"}>
+      <.button variant={:solid} href={~p"/hosts/#{@host.handle}/events/create"}>
         <.icon name="i-lucide-plus" />
         <span>New event</span>
       </.button>
