--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -2,11 +2,15 @@
   <.host_header current_user={@current_user} host={@host}>
     <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@host.handle}/events"} />
     <span class="text-xs font-semibold text-zinc-400">/</span>
-    <.host_breadcrumb_label text={@event.name} />
+    <%= if is_nil(@event) do %>
+      <.host_breadcrumb_label text="Create new" />
+    <% else %>
+      <.host_breadcrumb_label text={@event.name} />
+    <% end %>
   </.host_header>
 
   <div class="grid max-w-screen-xl gap-8 p-4 lg:p-2">
-    <div class="flex w-full flex-wrap items-end gap-2">
+    <div :if={not is_nil(@event)} class="flex w-full flex-wrap items-end gap-2">
       <div class="grow space-y-1">
         <h2 class="col-span-full text-3xl font-medium">{@event.name}</h2>
         <div class="flex gap-4">
@@ -44,27 +48,39 @@
   </div>
   <div class="grid max-w-screen-xl items-start gap-4 pb-8 lg:grid-cols-[theme(space.64)_1fr] lg:gap-8 lg:p-2">
     <div class="flex gap-2 overflow-x-auto whitespace-nowrap px-2 pb-2 lg:grid lg:rounded-xl lg:bg-zinc-50/70 lg:py-2">
-      <.link
-        patch={~p"/hosts/#{@host.handle}/events/#{@event.public_id}/dashboard"}
-        class="p-2 text-sm font-medium capitalize text-zinc-400 aria-selected:text-zinc-950"
-      >
-        Overview (old)
-      </.link>
+      <%= if not is_nil(@event) do %>
+        <.link
+          patch={~p"/hosts/#{@host.handle}/events/#{@event.public_id}/dashboard"}
+          class="p-2 text-sm font-medium capitalize text-zinc-400 aria-selected:text-zinc-950"
+        >
+          Overview (old)
+        </.link>
 
-      <.link
-        :for={
-          {label, action} <- [
-            {"Overview", :overview},
-            {"Event Details", :details},
-            {"Settings", :settings}
-          ]
-        }
-        patch={Routes.host_events_path(GitsWeb.Endpoint, action, @host.handle, @event.public_id)}
-        aria-selected={"#{@action == action}"}
-        class="rounded-lg p-2 text-sm font-medium capitalize text-zinc-400 aria-selected:text-zinc-950"
-      >
-        {label}
-      </.link>
+        <.link
+          :for={
+            {label, action} <- [
+              {"Overview", :overview},
+              {"Event Details", :details},
+              {"Settings", :settings}
+            ]
+          }
+          patch={
+            Routes.host_events_path(GitsWeb.Endpoint, action, @host.handle, @event.public_id)
+          }
+          aria-selected={"#{@action == action}"}
+          class="rounded-lg p-2 text-sm font-medium capitalize text-zinc-400 aria-selected:text-zinc-950"
+        >
+          {label}
+        </.link>
+      <% else %>
+        <.link
+          patch={~p"/hosts/#{@host.handle}/events"}
+          class="rounded-lg p-2 text-sm flex items-center gap-2 font-medium text-zinc-400"
+        >
+          <.icon name="i-lucide-chevron-left" />
+          <span>Cancel</span>
+        </.link>
+      <% end %>
     </div>
 
     <div class="px-2">
@@ -79,7 +95,7 @@
 
       <.live_component
         :if={@action == :details}
-        id={@event.id}
+        id={if(not is_nil(@event), do: @event.id, else: "create-new")}
         module={__MODULE__.Details}
         current_user={@current_user}
         host={@host}
