--- a/lib/gits_web/live/host_live/events/show/details.html.heex
+++ b/lib/gits_web/live/host_live/events/show/details.html.heex
@@ -55,6 +55,15 @@
       options={if(@host.state == :verified, do: [:private, :public], else: [:private])}
     />
 
+    <div class="col-span-full">
+      <h2 class="text-base/7 font-semibold text-gray-900">Listing image</h2>
+      <p class="text-sm text-gray-600">
+        <!-- This information will be displayed publicly so be careful what you share. -->
+      </p>
+    </div>
+
+    <div></div>
+
     <div class="col-span-full flex gap-2">
       <.button size={:box}>
         <.icon name="i-lucide-save" />
