--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -36,7 +36,7 @@
             :if={@event.state == :published}
             class="inline-flex items-center rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset ring-green-600/20"
           >
-            Badge
+            Published
           </span>
         </div>
       </div>
