--- a/lib/gits_web/live/host_live/events/show/settings.html.heex
+++ b/lib/gits_web/live/host_live/events/show/settings.html.heex
@@ -62,7 +62,7 @@
       phx-target={@myself}
     >
       <.icon name="i-lucide-plus" />
-      <span>Webhook</span>
+      <span>Create</span>
     </.button>
   </div>
 
