--- a/lib/gits_web/live/host_live/events/show.html.heex
+++ b/lib/gits_web/live/host_live/events/show.html.heex
@@ -1,6 +1,6 @@
 <div class="grid gap-4">
-  <.host_header current_user={@current_user} host={@host}>
-    <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@host.handle}/events"} />
+  <.host_header current_user={@current_user} handle={@handle} host_name={@host_name}>
+    <.host_breadcrumb_button text="Events" href={~p"/hosts/#{@handle}/events"} />
     <span class="text-xs font-semibold text-zinc-400">/</span>
     <%= if is_nil(@event) do %>
       <.host_breadcrumb_label text="Create new" />
@@ -50,31 +50,34 @@
     <div class="flex gap-2 overflow-x-auto whitespace-nowrap px-2 pb-2 lg:grid lg:rounded-xl lg:bg-zinc-50/70 lg:py-2">
       <%= if not is_nil(@event) do %>
         <.link
-          patch={~p"/hosts/#{@host.handle}/events/#{@event.public_id}/dashboard"}
+          patch={~p"/hosts/#{@handle}/events/#{@event.public_id}/dashboard"}
           class="p-2 text-sm font-medium capitalize text-zinc-400 aria-selected:text-zinc-950"
         >
           Overview (old)
         </.link>
 
-        <.link
+        <.button
           :for={
             {label, action} <- [
               {"Overview", :overview},
-              {"Event Details", :details},
+              {"Details", :details},
+              {"Tickets", :tickets},
               {"Settings", :settings}
             ]
           }
-          patch={
-            Routes.host_events_path(GitsWeb.Endpoint, action, @host.handle, @event.public_id)
-          }
+          variant={:ghost}
+          size={:box}
+          href={Routes.host_events_path(GitsWeb.Endpoint, action, @handle, @event.public_id)}
           aria-selected={"#{@action == action}"}
-          class="rounded-lg p-2 text-sm font-medium capitalize text-zinc-400 aria-selected:text-zinc-950"
+          class="aria-selected:text-zinc-950"
         >
-          {label}
-        </.link>
+          <span class="text-left w-full">
+            {label}
+          </span>
+        </.button>
       <% else %>
         <.link
-          patch={~p"/hosts/#{@host.handle}/events"}
+          patch={~p"/hosts/#{@handle}/events"}
           class="rounded-lg p-2 text-sm flex items-center gap-2 font-medium text-zinc-400"
         >
           <.icon name="i-lucide-chevron-left" />
@@ -89,7 +92,6 @@
         id={@event.id}
         module={__MODULE__.Dashboard}
         current_user={@current_user}
-        host={@host}
         event={@event}
       />
 
@@ -98,7 +100,20 @@
         id={if(not is_nil(@event), do: @event.id, else: "create-new")}
         module={__MODULE__.Details}
         current_user={@current_user}
-        host={@host}
+        host_id={@host_id}
+        host_state={@host_state}
+        handle={@handle}
+        event={@event}
+      />
+
+      <.live_component
+        :if={@action == :tickets}
+        id="tickets"
+        module={__MODULE__.Tickets}
+        current_user={@current_user}
+        host_id={@host_id}
+        host_state={@host_state}
+        handle={@handle}
         event={@event}
       />
 
@@ -107,7 +122,6 @@
         id={@event.id}
         module={__MODULE__.Settings}
         current_user={@current_user}
-        host={@host}
         event={@event}
       />
     </div>
