--- a/lib/gits_web/live/host_live/settings/api.html.heex
+++ b/lib/gits_web/live/host_live/settings/api.html.heex
@@ -1,5 +1,5 @@
 <div class="grid gap-4">
-  <.host_header current_user={@current_user} host={@host}>
+  <.host_header current_user={@current_user} handle={@host.handle} host_name={@host.name}>
     <.host_breadcrumb_button text="Settings" href={~p"/hosts/#{@host.handle}/settings"} />
     <span class="text-xs font-semibold text-zinc-400">/</span>
     <.host_breadcrumb_label text="API" />
