--- a/lib/gits_web/live/host_live/events.html.heex
+++ b/lib/gits_web/live/host_live/events.html.heex
@@ -12,7 +12,7 @@
 <% else %>
   <.live_component
     id="show-event"
-    event_id={if(is_nil(@event), do: nil, else: @event.public_id)}
+    event_id={if(is_nil(assigns[:event]), do: nil, else: @event.public_id)}
     module={__MODULE__.Show}
     current_user={@current_user}
     host_id={@host.id}
@@ -20,6 +20,5 @@
     host_state={@host.state}
     handle={@host.handle}
     live_action={@live_action}
-    manage_ticket={nil}
   />
 <% end %>
