--- a/lib/gits_web/live/host_live/dashboard.html.heex
+++ b/lib/gits_web/live/host_live/dashboard.html.heex
@@ -35,8 +35,8 @@
         navigate={~p"/hosts/#{@host.handle}/events/#{event.public_id}"}
         class="border rounded-lg p-4 grid gap-4"
       >
-        <div :if={false} class="aspect-[3/2] w-24 shrink-0 overflow-hidden rounded-lg bg-zinc-200">
-          <img src={Gits.Bucket.get_image_url(nil)} alt="Event poster" class="size-full" />
+        <div class="aspect-[3/2] w-24 shrink-0 overflow-hidden rounded-lg bg-zinc-200">
+          <img src={event.poster.url} alt="Event poster" class="size-full" />
         </div>
         <h3 class="text-lg/5 font-semibold">
           {event.name} The Ultimate Cheese Festival
